--- a/app/views/rocket_job_mission_control/jobs/index.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index.html.haml
@@ -7,7 +7,7 @@
       - else
         %h2
           = current_state
-        %table.table.datatable.jobs-datatable{ data: { source: "#{jobs_url(format: 'json')}" } }
+        %table.table.datatable.jobs-datatable{ style: "width: 100%", data: { source: "#{jobs_url(format: 'json')}" } }
           %thead
             %tr
               %th Class
@@ -15,20 +15,3 @@
               %th Completion
               %th Duration
           %tbody
-            - @jobs.each do |job|
-              %tr{ class: "card callout callout-#{job.state}" }
-                %td.title.col-md-4
-                  = link_to(job_path(job.id)) do
-                    %i.fa{class: job_icon(job), style: 'font-size: 75%;', title: job.state}
-                    = job.class.name
-                %td.description.col-md-6
-                  = job.description.try(:truncate, 50)
-                %td.completion.col-md-2
-                  - if job.completed?
-                    = job.completed_at
-                  - if job.running?
-                    .progress
-                      .progress-bar{ style: "width: #{job.percent_complete}%;", title: "#{job.percent_complete}% percent complete."}
-                %td.duration.col-md-2
-                  %i.fa.fa-clock-o
-                  = job.duration
