--- a/app/assets/stylesheets/rocket_job_mission_control/base.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/base.scss
@@ -226,7 +226,7 @@ table.datatable {
   a { display: block; }
 
   .card:nth-child(1) { border-top: 1px solid #ddd; }
-  .card:nth-child(odd):not(.selected) { background-color: #fff; }
+  .card:nth-child(odd) { background-color: #fff; }
 
   .card {
     border-bottom: 1px solid #ddd;
@@ -236,6 +236,7 @@ table.datatable {
 
     &:hover {
       cursor: pointer;
+      background-color: #DADADA;
     }
 
     .inner {
