Fix responsive features for datatables.

--- a/app/views/rocket_job_mission_control/jobs/index.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index.html.haml
@@ -7,7 +7,7 @@
       - else
         %h2
           = current_state
-        %table.table.datatable.jobs-datatable{ data: { source: "#{jobs_url(format: 'json')}" } }
+        %table.table.datatable.jobs-datatable{ style: "width: 100%" }
           %thead
             %tr
               %th Class
