Add sidebar to workers. Move state icon finder method to application helper and rename to remove misconception it is only used with jobs.

--- a/app/views/layouts/rocket_job_mission_control/partials/_sidebar.html.haml
+++ b/app/views/layouts/rocket_job_mission_control/partials/_sidebar.html.haml
@@ -7,3 +7,5 @@
     = render partial: 'rocket_job_mission_control/jobs/sidebar'
   - if @dirmon_sidebar
     = render partial: 'rocket_job_mission_control/dirmon_entries/sidebar'
+  - if @workers_sidebar
+    = render partial: 'rocket_job_mission_control/workers/sidebar'
