--- a/app/views/rocket_job_mission_control/jobs/_sidebar.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_sidebar.html.haml
@@ -10,7 +10,7 @@
   - job_states.each do |state|
     %li{class: state}
       = link_to(jobs_path(state: state)) do
-        %i.fa{class: job_state_icon(state)}
+        %i.fa{class: state_icon(state)}
         = state.capitalize
 / tiny only nav
 %ul#xs-menu.nav.visible-xs
@@ -23,4 +23,4 @@
   - job_states.each do |state|
     %li{class: state}
       = link_to(jobs_path(state: state)) do
-        %i.fa{class: job_state_icon(state)}
+        %i.fa{class: state_icon(state)}
