--- a/app/views/rocket_job_mission_control/dirmon_entries/index.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/index.html.haml
@@ -10,6 +10,7 @@
           %thead
             %tr
               %th Name
+              %th Job Class
               %th Pattern
           %tbody
             - @dirmons.each do |dirmon|
@@ -18,5 +19,7 @@
                   = link_to(dirmon_entry_path(dirmon.id)) do
                     %i.fa{ class: job_state_icon(dirmon.state), style: 'font-size: 75%', title: dirmon.state }
                     = dirmon.name
+                %td.title.col-md-5
+                  = dirmon.job_class_name
                 %td.description.col-md-5
                   = dirmon.pattern.try(:truncate, 80)
