--- a/app/views/rocket_job_mission_control/jobs/index.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index.html.haml
@@ -1,34 +1,68 @@
 #queue
   .job-list
     .list
-      - if @jobs.empty?
-        .title
-          .lead.text-center No Jobs Found.
-      - else
-        %h2
-          = current_state
-        %table.table.datatable.jobs-datatable{ style: "width: 100%" }
-          %thead
-            %tr
-              %th Class
-              %th Description
-              %th Completion
+      %h2
+        = current_state
+      %table.table.datatable.jobs-datatable{ style: "width: 100%" }
+        %thead
+          %tr
+            %th Class
+            %th Description
+            - case current_state
+            - when 'Completed Jobs'
               %th Duration
-          %tbody
-            - @jobs.each do |job|
-              %tr{ class: "card callout callout-#{job.state}" }
-                %td.title.col-md-4
-                  = link_to(job_path(job.id)) do
-                    %i.fa{class: job_icon(job), style: 'font-size: 75%;', title: job.state}
-                    = job.class.name
-                %td.description.col-md-6
-                  = job.description.try(:truncate, 50)
-                %td.completion.col-md-2
-                  - if job.completed?
-                    = job.completed_at
-                  - if job.running?
-                    .progress
-                      .progress-bar{ style: "width: #{job.percent_complete}%;", title: "#{job.percent_complete}% percent complete."}
+              %th Completed
+            - when 'Running Jobs'
+              %th Progress
+            - when 'Scheduled Jobs'
+              %th Runs in
+              %th Cron Schedule
+            - when 'Queued Jobs'
+              %th Priority
+              %th Queued For
+            - when 'Paused Jobs'
+              %th Paused
+            - when 'Failed Jobs'
+              %th Failed
+            - when 'Aborted Jobs'
+              %th Aborted
+            - else
+              %th Duration
+        %tbody
+          - @jobs.each do |job|
+            %tr{ class: "card callout callout-#{job.state}" }
+              %td.title.col-md-4
+                = link_to(job_path(job.id)) do
+                  %i.fa{class: job_icon(job), style: 'font-size: 75%;', title: job.state}
+                  = job.class.name
+              %td.description.col-md-6
+                = job.description.try(:truncate, 50)
+              - case current_state
+              - when 'All Jobs'
                 %td.duration.col-md-2
-                  %i.fa.fa-clock-o
+                  = job.duration
+              - when 'Completed Jobs'
+                %td.duration.col-md-2
+                  = job.duration
+                %td.completion.col-md-2
+                  = "#{RocketJob.seconds_as_duration(Time.now - job.completed_at)} ago"
+              - when 'Running Jobs'
+                %td.completion.col-md-2
+                  .progress
+                    .progress-bar{ style: "width: #{job.percent_complete}%;", title: "#{job.percent_complete}% percent complete."}
+              - when 'Scheduled Jobs'
+                %td.completion.col-md-2
+                  = RocketJob.seconds_as_duration(job.run_at - Time.now)
+                %td.completion.col-md-2
+                  = job.cron_schedule if job.respond_to?(:cron_schedule)
+              - when 'Paused Jobs', 'Failed Jobs', 'Aborted Jobs'
+                %td.duration.col-md-2
+                  = "#{RocketJob.seconds_as_duration(Time.now - job.completed_at)} ago"
+              - when 'Queued Jobs'
+                %td.completion.col-md-2
+                  = job.priority
+                %td.duration.col-md-2
+                  = job.duration
+              - else
+                %td.duration.col-md-2
                   = job.duration
