Clean up worker action buttons.

--- a/app/views/rocket_job_mission_control/workers/index.html.haml
+++ b/app/views/rocket_job_mission_control/workers/index.html.haml
@@ -15,7 +15,7 @@
   .worker-list
     .list
       %h2
-        Workers
+        Worker Processes
       %table.table.datatable.workers-datatable{ style: "width: 100%" }
         %thead
           %tr
