Fixup styling on worker index. Fix old method call on dirmon index.

--- a/app/assets/stylesheets/rocket_job_mission_control/base.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/base.scss
@@ -17,6 +17,10 @@ table.datatable {
   border-collapse: collapse;
 }
 
+.dataTables_wrapper {
+  margin-top: 2em;
+}
+
 #queue { height: 100%; }
 
 .job-list {
