--- a/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
+++ b/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
@@ -19,7 +19,7 @@
         %li
           = link_to workers_path, class: active_page(workers_path) do
             %i.fa.fa-database
-            Worker Processes
+            Workers
         %li
           = link_to running_jobs_path, class: active_page(running_jobs_path) do
             %i.fa.fa-circle-o-notch
@@ -27,7 +27,7 @@
         %li
           = link_to dirmon_entries_path, class: active_page(dirmon_entries_path) do
             %i.fa.fa-folder-o
-            Directory Monitors
+            Dirmon
       %ul.nav.navbar-nav.navbar-right
         %li
           %a{:href => main_app.root_path } Home
