Edit header names.

--- a/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
+++ b/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
@@ -23,11 +23,11 @@
         %li
           = link_to running_jobs_path, class: active_page(running_jobs_path) do
             %i.fa.fa-circle-o-notch
-            Running
+            Active
         %li
           = link_to dirmon_entries_path, class: active_page(dirmon_entries_path) do
             %i.fa.fa-folder-o
-            Dirmon
+            Directory Monitors
       %ul.nav.navbar-nav.navbar-right
         %li
           %a{:href => main_app.root_path } Home
