--- a/app/views/rocket_job_mission_control/jobs/running.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/running.html.haml
@@ -1,37 +1,25 @@
-.col-md-14.col-md-offset-1
-  .jumbotron
-    %h3 There are currently #{@jobs.count} jobs running.
-  #accordion.panel-group
-  - @jobs.each do |job|
-    .panel.panel-default
-      .panel-heading
-        %h4.panel-title
-          %a.collapsed{href: "##{job.id}", data: {toggle: 'collapse', parent: '#accordion'} }
-            %i.fa.fa-plus-square-o{ style: 'font-size: 80%;'}
-            = job.class.name
-      .panel-collapse.collapse{ id: job.id }
-        .panel-body
-          .info
-            .progress
-              .progress-bar{ style: "width: #{job.percent_complete}%; min-width: 1em;", title: "#{job.percent_complete}% percent complete."}
-          - if job.respond_to?(:input_categories)
-            .slice_count
-              %label Slices Running:
-              = job.input.find_all { |s| s.state == :running }.count
-          - else
-            .worker
-              %label Worker:
-              = job.worker_name
-
-          = render partial: 'status', locals: { job: job }
-        - if job.respond_to?(:input_categories)
-          %table.table
-            %tr
-              %th worker
-              %th parameters
-            - job.input.each('state' => 'running') do |slice|
-              %tr
-                %td= slice.worker_name
-                %td
-                  %pre
-                    %code= display_slice_info(slice, job.encrypt?)
+#queue
+  .job-list
+    .list
+      %h2
+        Workers actively working on jobs
+      %table.table.datatable.jobs-datatable{ style: "width: 100%" }
+        %thead
+          %tr
+            %th Hostname : PID
+            %th Class
+            %th Description
+            %th Started
+        %tbody
+          - @busy.each do |worker_name, job, started_at|
+            %tr{ class: "card callout callout-running" }
+              %td.title.col-md-4
+                %i.fa{class: job_icon(job), style: 'font-size: 75%;', title: job.state}
+                = worker_name
+              %td.title.col-md-4
+                = link_to(job_path(job.id)) do
+                  = job.class.name
+              %td.description.col-md-6
+                = job.description.try(:truncate, 50)
+              %td.duration.col-md-2
+                = "#{RocketJob.seconds_as_duration(Time.now - started_at)} ago" if started_at
