--- a/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
+++ b/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
@@ -21,7 +21,7 @@
             %i.fa.fa-database
             Workers
         %li
-          = link_to running_jobs_path, class: active_page(running_jobs_path) do
+          = link_to active_processes_path, class: active_page(active_processes_path) do
             %i.fa.fa-circle-o-notch
             Activity
         %li
