--- a/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
+++ b/app/views/layouts/rocket_job_mission_control/partials/_header.html.haml
@@ -8,8 +8,8 @@
         %span.icon-bar
       %a.navbar-brand.brand{ href: 'http://rocketjob.io', target: '_blank'}
         = image_tag('rocket_job_mission_control/rocket-icon-64x64.png', size: '32x32')
-        rocket
-        %span job
+        Rocket
+        %span Job
     .navbar-collapse.collapse
       %ul.nav.navbar-nav
         %li
