--- a/app/views/rocket_job_mission_control/jobs/_sidebar.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_sidebar.html.haml
@@ -1,26 +1,26 @@
 %ul#lg-menu.nav.hidden-xs
   %li.active
-    = link_to(jobs_path(state: 'all')) do
+    = link_to(jobs_path) do
       %i.fa.fa-list
       All
   %li
-    = link_to(jobs_path(state: 'scheduled')) do
+    = link_to(scheduled_jobs_path) do
       %i.fa.fa-clock-o
       Scheduled
   - job_states.each do |state|
     %li{class: state}
-      = link_to(jobs_path(state: state)) do
+      = link_to("#{state}_jobs".to_sym) do
         %i.fa{class: state_icon(state)}
         = state.capitalize
 / tiny only nav
 %ul#xs-menu.nav.visible-xs
   %li
-    = link_to(jobs_path(state: 'all')) do
+    = link_to(jobs_path) do
       %i.fa.fa-list
   %li
-    = link_to(jobs_path(state: 'scheduled')) do
+    = link_to(scheduled_jobs_path) do
       %i.fa.fa-clock-o
   - job_states.each do |state|
     %li{class: state}
-      = link_to(jobs_path(state: state)) do
+      = link_to("#{state}_jobs".to_sym) do
         %i.fa{class: state_icon(state)}
