--- a/app/views/rocket_job_mission_control/jobs/index_filters/completed.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index_filters/completed.html.haml
@@ -1,13 +1,15 @@
 #queue
   .job-list
     .list
-      %h2 Jobs
+      %h2
+        = current_state
       %table.table.datatable.jobs-datatable{ style: "width: 100%" }
         %thead
           %tr
             %th Class
             %th Description
             %th Duration
+            %th Completed
         %tbody
           - @jobs.each do |job|
             %tr{ class: "card callout callout-#{job.state}" }
@@ -19,3 +21,5 @@
                 = job.description.try(:truncate, 50)
               %td.duration.col-md-2
                 = job.duration
+              %td.completion.col-md-2
+                = "#{RocketJob.seconds_as_duration(Time.now - job.completed_at)} ago"
