--- a/app/views/rocket_job_mission_control/jobs/index_filters/running.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index_filters/running.html.haml
@@ -1,13 +1,16 @@
 #queue
   .job-list
     .list
-      %h2 Jobs
+      %h2
+        = current_state
       %table.table.datatable.jobs-datatable{ style: "width: 100%" }
         %thead
           %tr
             %th Class
             %th Description
-            %th Duration
+            %th Progress
+            %th Priority
+            %th Started
         %tbody
           - @jobs.each do |job|
             %tr{ class: "card callout callout-#{job.state}" }
@@ -17,5 +20,10 @@
                   = job.class.name
               %td.description.col-md-6
                 = job.description.try(:truncate, 50)
-              %td.duration.col-md-2
-                = job.duration
+                %td.completion.col-md-2
+                  .progress
+                    .progress-bar{ style: "width: #{job.percent_complete}%;", title: "#{job.percent_complete}% percent complete."}
+                %td.completion.col-md-2
+                  = job.priority
+                %td.duration.col-md-2
+                  = "#{RocketJob.seconds_as_duration(Time.now - job.started_at)} ago" if job.started_at
