--- a/app/views/rocket_job_mission_control/jobs/index_filters/completed.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index_filters/completed.html.haml
@@ -1,8 +1,7 @@
 #queue
   .job-list
     .list
-      %h2
-        = current_state
+      %h2 Completed Job
       %table.table.datatable.jobs-datatable{ style: "width: 100%" }
         %thead
           %tr
