--- a/app/assets/stylesheets/rocket_job_mission_control/callout.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/callout.scss
@@ -57,20 +57,20 @@
 /* Used by Workers */
 .callout-top {
   border: 1px solid #eee;
-  border-top-width: 5px;
+  border-left-width: 5px;
 }
-.callout-info-top {
-  border-top-color: #1b809e;
+.callout-info {
+  border-left-color: #1b809e;
 }
-.callout-success-top {
-  border-top-color: #3c763d;
+.callout-success {
+  border-left-color: #3c763d;
 }
-.callout-warning-top {
-  border-top-color: #aa6708;
+.callout-warning {
+  border-left-color: #aa6708;
 }
-.callout-alert-top {
-  border-top-color: #ce4844;
+.callout-alert {
+  border-left-color: #ce4844;
 }
-.callout-zombie-top {
-  border-top-color: darkred;
+.callout-zombie {
+  border-left-color: darkred;
 }
