Add color for pending dirmons.

--- a/app/assets/stylesheets/rocket_job_mission_control/callout.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/callout.scss
@@ -41,6 +41,12 @@
 }
 
 /* Used by Dirmon Entries */
+.callout-pending {
+  border-color: #9BCE33;
+  a {
+    color: #9BCE33;
+  }
+}
 .callout-enabled {
   border-left-color: green;
   a {
