--- a/app/views/rocket_job_mission_control/dirmon_entries/new.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/new.html.haml
@@ -1,5 +1,6 @@
-.row
-  .col-xm-14
-    .lead New Dirmon Entry
+.container-fluid
+  .row
+    .col-xm-14
+      .lead New Dirmon Entry
 
-    = render partial: 'form'
+      = render partial: 'form'
