--- a/app/views/rocket_job_mission_control/workers/index_filters/paused.html.haml
+++ b/app/views/rocket_job_mission_control/workers/index_filters/paused.html.haml
@@ -3,12 +3,12 @@
     .list
       .row
         .col-md-6
-          %h2 Worker Processes
+          %h2 Paused Worker Processes
         .col-md-6.worker-collection-actions
           - if @workers.present?
             %ol.pull-right
               .btn-group
-                - [:stop_all, :pause_all, :resume_all, :destroy_zombies].each do |action|
+                - [:stop_all, :resume_all, :destroy_zombies].each do |action|
                   = link_to("#{action.to_s.humanize.capitalize}",
                     rocket_job_mission_control.update_all_workers_path(worker_action: action),
                     method: :patch,
