--- a/app/views/rocket_job_mission_control/workers/index_filters/starting.html.haml
+++ b/app/views/rocket_job_mission_control/workers/index_filters/starting.html.haml
@@ -3,7 +3,7 @@
     .list
       .row
         .col-md-6
-          %h2 Worker Processes
+          %h2 Running Worker Processes
         .col-md-6.worker-collection-actions
           - if @workers.present?
             %ol.pull-right
@@ -36,4 +36,4 @@
               %td.heartbeat
                 = "#{RocketJob.seconds_as_duration(Time.now - worker.heartbeat.updated_at)} ago"
               %td.actions
-                = render partial: 'actions', locals: { worker: worker }
+                = render partial: 'rocket_job_mission_control/workers/actions', locals: { worker: worker }
