Add server side processing to dirmons and workers. Fix styling, add refresh links, and more!

--- a/app/assets/stylesheets/rocket_job_mission_control/base.scss
+++ b/app/assets/stylesheets/rocket_job_mission_control/base.scss
@@ -21,6 +21,10 @@ table.datatable {
   margin-top: 2em;
 }
 
+.dt-reload {
+  margin: 1em 0;
+}
+
 .job-list {
   height: 100%;
   min-height: 768px;
