--- a/app/views/layouts/rocket_job_mission_control/partials/_sidebar.html.haml
+++ b/app/views/layouts/rocket_job_mission_control/partials/_sidebar.html.haml
@@ -1,7 +1,7 @@
 #sidebar.col-sm-2.col-xs-1.sidebar-offcanvas
   %ul.nav
     %li
-      %a.visible-xs.text-center{"data-toggle" => "offcanvas", :href => "#"}
+      %a.visible-xs{"data-toggle" => "offcanvas", :href => "#"}
         %i.fa.fa-chevron-right
   - if @jobs_sidebar
     = render partial: 'rocket_job_mission_control/jobs/sidebar'
