--- a/app/views/rocket_job_mission_control/jobs/_sidebar.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/_sidebar.html.haml
@@ -7,11 +7,13 @@
     = link_to(scheduled_jobs_path) do
       %i.fa.fa-clock-o
       Scheduled
+      = "(#{job_counts_by_state("scheduled")})"
   - job_states.each do |state|
     %li{class: state}
       = link_to("#{state}_jobs".to_sym) do
         %i.fa{class: state_icon(state)}
         = state.capitalize
+        = "(#{job_counts_by_state(state)})"
 / tiny only nav
 %ul#xs-menu.nav.visible-xs
   %li
