--- a/app/views/rocket_job_mission_control/jobs/index_filters/running.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index_filters/running.html.haml
@@ -1,7 +1,12 @@
 .job-list
   .list
-    %h2 Running Jobs
-    %table.table.datatable.jobs-datatable{ style: "width: 100%", data: { source: "#{running_jobs_url(format: 'json')}" } }
+    .row
+      .col-sm-10
+        %h2 Running Jobs
+      .col-sm-2
+        .btn.btn-default.pull-right.dt-reload{ data: { behavior: 'reload' } }
+          %i.fa.fa-refresh
+    %table.table.datatable.jobs-datatable{ style: "width: 100%", data: { source: "#{running_jobs_url(format: 'json')}", column_num: 5 } }
       %thead
         %tr
           %th Class
