--- a/app/views/rocket_job_mission_control/dirmon_entries/_properties.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/_properties.html.haml
@@ -22,6 +22,9 @@
           - case key.type.name
           - when 'Integer'
             = properties.number_field property_name, value: @dirmon_entry.properties[property_name], class: 'form-control', placeholder: placeholder
+          - when 'Hash'
+            - value = @dirmon_entry.properties[property_name]
+            = properties.text_field property_name, value: value ? value.to_json : '', class: 'form-control', placeholder: '{"argument1":"value1", "argument2":"value2", "argument3":"value3"}'
           - when 'Array'
             - options = Array(@dirmon_entry.properties[property_name])
             = properties.select property_name, options_for_select(options, options), {include_hidden: false}, {class: 'selectize', multiple: true}
