--- a/app/views/rocket_job_mission_control/active_processes/index.html.haml
+++ b/app/views/rocket_job_mission_control/active_processes/index.html.haml
@@ -14,3 +14,11 @@
           %th Description
           %th Started
       %tbody
+
+:javascript
+  jQuery(function() {
+    new RjmcDatatable(
+      $('.active-processes-datatable'),
+      [{data: '0'}, {data: '1'}, {data: '2'}, {data: '3'}],
+      {ordering: false, searching: false});
+  });
