--- a/app/views/rocket_job_mission_control/dirmon_entries/index_filters/failed.html.haml
+++ b/app/views/rocket_job_mission_control/dirmon_entries/index_filters/failed.html.haml
@@ -8,3 +8,10 @@
           %th Job Class
           %th Pattern
       %tbody
+
+:javascript
+  jQuery(function() {
+    new RjmcDatatable(
+      $('.dirmon-datatable'),
+      [{data: '0'}, {data: '1'}, {data: '2'}]);
+  });
