--- a/app/views/rocket_job_mission_control/jobs/index_filters/aborted.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index_filters/aborted.html.haml
@@ -6,10 +6,17 @@
       .col-sm-2
         .btn.btn-default.pull-right.dt-reload{ data: { behavior: 'reload' } }
           %i.fa.fa-refresh
-    %table.table.datatable.jobs-datatable{ style: "width: 100%", data: { source: "#{aborted_jobs_url(format: 'json')}", column_num: 3 } }
+    %table.table.datatable.jobs-datatable{ style: "width: 100%", data: { source: "#{aborted_jobs_url(format: 'json')}" } }
       %thead
         %tr
           %th Class
           %th Description
           %th Aborted
       %tbody
+
+:javascript
+  jQuery(function() {
+    new RjmcDatatable(
+      $(".jobs-datatable"),
+      [{data: '0'}, {data: '1'}, {data: '2'}]);
+  });
