--- a/app/views/rocket_job_mission_control/jobs/index.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index.html.haml
@@ -19,5 +19,6 @@
   jQuery(function() {
     new RjmcDatatable(
       $(".jobs-datatable"),
-      [{data: '0'}, {data: '1'}, {data: '2'}, {data: '3', orderable: false}]);
+      [{data: '0'}, {data: '1'}, {data: '2'}, {data: '3', orderable: false}]
+    );
   });
