--- a/app/views/rocket_job_mission_control/workers/index_filters/paused.html.haml
+++ b/app/views/rocket_job_mission_control/workers/index_filters/paused.html.haml
@@ -29,10 +29,9 @@
             %th Actions
         %tbody
 
-
 :javascript
   jQuery(function() {
     new RjmcDatatable(
       $('.workers-datatable'),
-      [{data: '0'}, {data: '1'}, {data: '2'}, {data: '3'}, {data: '4'}]);
+      [{data: '0'}, {data: '1'}, {data: '2'}, {data: '3'}, {data: '4', orderable: false}]);
   });
