--- a/app/views/rocket_job_mission_control/jobs/index_filters/scheduled.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index_filters/scheduled.html.haml
@@ -19,5 +19,5 @@
   jQuery(function() {
     new RjmcDatatable(
       $(".jobs-datatable"),
-      [{data: '0'}, {data: '1'}, {data: '2'}, {data: '3'}]);
+      [{data: '0'}, {data: '1'}, {data: '2', orderable: false}, {data: '3'}]);
   });
