Fix active jobs view to include all active jobs. Show created column instead of completed when viewing all jobs.

--- a/app/views/rocket_job_mission_control/jobs/index.html.haml
+++ b/app/views/rocket_job_mission_control/jobs/index.html.haml
@@ -11,7 +11,7 @@
         %tr
           %th Class
           %th Description
-          %th Completion
+          %th Created
           %th Duration
       %tbody
 
